samples/egress/egress-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: www-egress-gateway
spec:
  hosts:
  - www.naver.com
  gateways:
  - www-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - www-egressgateway
      port: 80
    route:
    - destination:
        host: www.naver.com
        port:
          number: 80
      weight: 100
